# wyy-music

./: .env.development  .env.production  .gitignore  Cargo.toml  LICENSE  README.md  index.html  md.json  package-lock.json  package.json  tsconfig.json  update.json  vite.config.ts
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: invokes.rs  main.rs  system_tray.rs  web.rs
src/api/: auth.ts  common.ts  index.ts  playlist.ts  typings.d.ts  typings.md
src/api/typings/: comment.d.ts  common.d.ts  enum.ts  mv.d.ts  playlist.d.ts  search.d.ts
src/api/wyy/: album.ts  artist.ts  auth.ts  common.ts  mv.ts  others.ts  playlist.ts  track.ts  user.ts
src/assets/: yunti.css
src/assets/iconfont/: demo_index.html  iconfont.css  iconfont.js  iconfont.json
src/components/: MAudio.vue  MHeader.vue  MMenu.vue  MPlaylist.vue  Playlist.vue
src/components/Common/: CommentList.vue  Lyrics.vue  MCover.vue  OldSongGridItemColumn.vue  OldSongGridItemRow.vue  Progress.vue  SongGridItem.vue  SongGridItemColumn.vue  SongGridItemRow.vue  SongSheets.vue  SquareGridItem.vue  TableOne.vue  VideoGridItem.vue  VideoGridItemColumn.vue  VideoGridItemRow.vue  (+1 more)
src/hooks/: useLocalStorage.ts  useRouteBack.ts
src/router/: index.ts
src/store/: cache.ts  index.ts  initCache.ts  music.ts  playlist.ts  setting.ts  user.ts
src/utils/: handle.ts  player.ts  request.ts  theme.ts  time.ts
src/views/: Album.vue  DailySong.vue  Demo.vue  Home.vue  HomeOld.vue  Login.vue  PlayList.vue  Test.vue  Unrealized.vue
src/windows/: Windows.ts
(+38 files in other folders)
