[package]
name = "music-app"
version = "0.0.6"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["dialog-open", "dialog-save", "fs-read-dir", "fs-read-file", "shell-open", "system-tray", "updater", "window-close", "window-create", "window-hide", "window-maximize", "window-minimize", "window-set-focus", "window-start-dragging", "window-unmaximize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-shadows = "0.2.1"

base64 = "0.21.0"
percent-encoding = "2.2.0"
http-range-header = "0.3.0"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3.28"
futures-io = "0.3.28"
tokio = { version = "1", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "z" # Optimize for binary size
strip = true # Remove debug symbols
